version-23.1/reference/rpk/rpk-iotune.mdx
---
title: rpk iotune
---

<head>
  <meta name="title" content="rpk iotune | Redpanda Docs" />
  <meta name="description" content="rpk iotune" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-iotune/" />
</head>

`rpk iotune` measures the I/O performance of the hardware used by a Redpanda instance and writes its parameters to an I/O configuration file that Redpanda reads on startup to optimize its I/O performance. Its benchmarks measure read/write IOPS and bandwidth.

By default `rpk iotune` writes its output parameters to `/etc/redpanda/io-config.yaml`.

### Usage

```
rpk iotune [flags]
```

### Flags

<!--
[cols=",,",]
|===
|*Value* |*Type* |*Description*

|--config |string |Redpanda config file, if not set the file will be
searched for in the default locations.

|--directories |strings |List of directories to evaluate.

|--duration |duration |Duration of tests.The value passed is a sequence
of decimal numbers, each with optional fraction and a unit suffix, such
as\{" "} `300ms`, `1.5s` or `2h45m`. Valid time units are `ns`, `us` (or
`µs`),\{" "} `ms`, `s`, `m`, `h` (default 10m0s).

|-h, --help |- |Help for iotune

|--no-confirm |- |Disable confirmation prompt if the iotune file already
exists

|--timeout |duration |The maximum time after -- to wait for iotune to
complete. The value passed is a sequence of decimal numbers, each with
optional fraction and a unit suffix, such as `300ms`, `1.5s` or\{" "}
`2h45m`. Valid time units are `ns`,\{" "} `us` (or `µs`), `ms`, `s`,\{"
"} `m`, `h` (default 1h0m0s).

|-v, --verbose |- |Enable verbose logging (default `false`).
|===

-->

### Example output

Running `rpk iotune` produces an output file that by default is saved in `/etc/redpanda/io-config.yaml`.

The contents of an example `io-config.yaml`:

```yaml
disks:
- mountpoint: /var/lib/redpanda/data
  read_iops: 40952
  read_bandwidth: 5638210048
  write_iops: 6685
  write_bandwidth: 1491679488
```

### Related topics
- [Optimize I/O](../../../manage/io-optimization) 
